tests/expectations/compiler/slice/array_slices_fail2.out
Error [ESAZ0374012]: Range 0..192 is out of bounds (array length is 32).
    --> compiler-test:3:17
     |
   3 |         let b = a[(2u32 - 1 - 1)..(8u32 * 8 * 3)];
     |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
